# NoctalEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
NoctalEngine/: CMakeLists.txt  NoctalEngine.h
NoctalEngine/Assets/Shaders/OpenGL/: ColouredTextureFS.frag  ColouredTextureVS.vert  SolidColourFS.frag  SolidColourVS.vert  TextureFS.frag  TextureFS.glsl  TextureVS.vert
NoctalEngine/src/: NoctalEngine.cpp  NoctalEngine.h  nepch.h
NoctalEngine/src/NoctalEngine/: Core.h  EntryPoint.h
NoctalEngine/src/NoctalEngine/Application/: AppLayer.h  Application.cpp  Application.h
NoctalEngine/src/NoctalEngine/Debugging/: ImGuiLayer.cpp  ImGuiLayer.h  Logger.cpp  Logger.h
NoctalEngine/src/NoctalEngine/Events/: Event.h  KeyboardEvents.h  MouseEvents.h  WindowEvents.h
NoctalEngine/src/NoctalEngine/Input/: InputManager.cpp  InputManager.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
NoctalEngine/src/NoctalEngine/Logging/: Logger.cpp  Logger.h
NoctalEngine/src/NoctalEngine/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
NoctalEngine/src/NoctalEngine/Rendering/: Bindable.h  BufferLayout.h  IndexBuffer.h  RenderData.cpp  Renderer.cpp  Renderer.h  RendererData.cpp  RendererData.h  Shader.h  TransformCBuffer.h  VertexBuffer.h  WrappedRenderer.h
NoctalEngine/src/NoctalEngine/Rendering/Buffers/: BufferLayout.h  ConstantBuffer.h  IndexBuffer.h  TransformCBuffer.h  VertexArray.h  VertexBuffer.h
NoctalEngine/src/NoctalEngine/Rendering/Camera/: OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h
NoctalEngine/src/NoctalEngine/Rendering/Drawables/: Drawable.cpp  Drawable.h  DrawableBase.h
NoctalEngine/src/NoctalEngine/Rendering/Geometry/: Geometry.h  IndexedTriangleList.h  Quad.h  Triangle.h  VertexLayout.cpp  VertexLayout.h
NoctalEngine/src/NoctalEngine/Rendering/Materials/: Material.cpp  Material.h
NoctalEngine/src/NoctalEngine/Rendering/OpenGL/: OpenGLDrawable.cpp  OpenGLDrawable.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTransformCBuffer.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
NoctalEngine/src/NoctalEngine/Rendering/OpenGL/Buffers/: OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLTransformCBuffer.cpp  OpenGLTransformCBuffer.h  OpenGLUniformBufferObject.cpp  OpenGLUniformBufferObject.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
NoctalEngine/src/NoctalEngine/Rendering/OpenGL/Drawables/: OpenGLBaseObject.h  OpenGLDrawable.cpp  OpenGLDrawable.h  OpenGLDrawableBase.h  OpenGLQuad.cpp  OpenGLQuad.h  OpenGLTriangle.cpp  OpenGLTriangle.h
NoctalEngine/src/NoctalEngine/Rendering/OpenGL/Shaders/: OpenGLFragmentShader.cpp  OpenGLFragmentShader.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderProgram.cpp  OpenGLShaderProgram.h  OpenGLVertexShader.cpp  OpenGLVertexShader.h  Texture.glsl
NoctalEngine/src/NoctalEngine/Rendering/OpenGL/Textures/: OpenGLTexture2D.cpp  OpenGLTexture2D.h
NoctalEngine/src/NoctalEngine/Rendering/SDL/: SDLRenderer.cpp  SDLRenderer.h
NoctalEngine/src/NoctalEngine/Rendering/Shaders/: Shader.h  ShaderLibrary.cpp  ShaderLibrary.h
NoctalEngine/src/NoctalEngine/Rendering/Textures/: Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h
NoctalEngine/src/NoctalEngine/Utility/: Timer.cpp  Timer.h
NoctalEngine/src/NoctalEngine/Window/: Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
NoctalEngine/src/NoctalEngine/Window/OpenGL/: OpenGLWindow.cpp  OpenGLWindow.h
Sandbox/: CMakeLists.txt  main.cpp
Sandbox/src/: Sandbox2D.cpp  Sandbox2D.h
